# xoaicup

./: .gitignore  C++CodeStyle.xml  CMakeLists.txt  README.md  xoaicup.pro
qtcreator/: xoaicup.pro
src/: cli.cpp  cli.h  main.cpp  xoaicup.cpp  xoaicup.h
